--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -54,3 +54,13 @@
   color: inherit;
   text-decoration: none;
 }
+
+/* Make only project titles clickable */
+.project-card h3 a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.project-card h3 a:hover {
+  text-decoration: underline;
+}
